--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <!-- saved from url=(0018)https://funpay.ru/ -->
-<html lang="ru"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="ru">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>FunPay — биржа игровых ценностей</title><link href="./451/css/main.css" rel="stylesheet" media="all">
-<script type="text/javascript" async="" src="./FunPay — биржа игровых ценностей_files/ec.js.Без названия"></script><script type="text/javascript" async="" src="./FunPay — биржа игровых ценностей_files/analytics.js.Без названия"></script><script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script><script async="" src="./FunPay — биржа игровых ценностей_files/gtm.js.Без названия"></script><script src="./FunPay — биржа игровых ценностей_files/translations.js.Без названия"></script>
+<title>FunPay — биржа игровых ценностей</title>
+<link href="./451/css/main.css" rel="stylesheet" media="all">
+<script type="text/javascript" async="" src="./FunPay — биржа игровых ценностей_files/ec.js.Без названия"></script>
+<script type="text/javascript" async="" src="./FunPay — биржа игровых ценностей_files/analytics.js.Без названия"></script>
+<script async="" src="./FunPay — биржа игровых ценностей_files/gtm.js.Без названия"></script>
+<script src="./FunPay — биржа игровых ценностей_files/translations.js.Без названия"></script>
 <script src="./FunPay — биржа игровых ценностей_files/jquery.min.js.Без названия"></script>
 <script src="./FunPay — биржа игровых ценностей_files/bootstrap.min.js.Без названия"></script>
 <script src="./FunPay — биржа игровых ценностей_files/main.min.js.Без названия"></script>
@@ -24,34 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-TWG83B');</script>
 
-<script>
-  (function (d, w, c) {
-    (w[c] = w[c] || []).push(function() {
-      try {
-        w.yaCounter36956765 = new Ya.Metrika({
-          id:36956765,
-          clickmap:true,
-          trackLinks:true,
-          accurateTrackBounce:true,
-          ut:"noindex",
-          ecommerce:"dataLayer"
-        });
-      } catch(e) { }
-    });
 
-    var n = d.getElementsByTagName("script")[0],
-      s = d.createElement("script"),
-      f = function () { n.parentNode.insertBefore(s, n); };
-    s.type = "text/javascript";
-    s.async = true;
-    s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-    if (w.opera == "[object Opera]") {
-      d.addEventListener("DOMContentLoaded", f, false);
-    } else { f(); }
-  })(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/36956765?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <div class="wrapper">
     <div class="wrapper-content">
                         <header id="header">
