--- a/spisok.html
+++ b/spisok.html
@@ -31,6 +31,26 @@
             <li><a href="https://evgeniyturovets.github.io/funpay2/oplata">Мои продажи (пустая)</a></li>
             <li><a href="https://evgeniyturovets.github.io/funpay2/finance">Финансы</a></li>
             <li><a href="https://evgeniyturovets.github.io/funpay2/chat">Сообщения</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/profile">Профиль</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/setting">Настройки</a>
+                <ul>
+                    <li><a href="https://evgeniyturovets.github.io/funpay2/parol">Пароль</a></li>
+                    <li><a href="https://evgeniyturovets.github.io/funpay2/parol">Забыл пароль</a></li>
+                </ul>
+            </li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/wallet">Кошелек</a></li>
+        </ol>
+
+        <hr> Помощь
+        <ol>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/suport">Помощь</a> </li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/suport2">Страница второго уровня</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/suport3">Страница третьего уровня</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/sup-article">Страница статьи</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/sup-search">Результаты поиска</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/sup-send">Отправить запрос (редактирование текса не работает)</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/sup-zaprosi">Мои запросы</a></li>
+            <li><a href="https://evgeniyturovets.github.io/funpay2/sup-zaprosi-d">Мои запросы</a></li>
         </ol>
 
     </div>
